infra/apps/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: coffeeshop-static
  name: coffeeshop-static
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: coffeeshop-static
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
